[package]
name = "mandelbrot"
version = "0.2.0"
authors = ["mtfwvi <mtfwvi@proton.me>"]
edition = "2021"
description = "Simple programm to generate mandelbrot images"
repository = "https://github.com/mtfwvi/mandelbrot"
license = "WTFPL"
readme = "README.md"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
num = "0.4.1"
