[package]
name = "mandelbrot"
version = "0.3.0"
authors = ["mtfwvi <mtfwvi@proton.me>"]
edition = "2021"
description = "CLI Tool to generate mandelbrot set plots using Rust."
repository = "https://github.com/mtfwvi/mandelbrot"
license = "WTFPL"
readme = "README.md"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
num = "0.4.1"
spinners = "4.1.1"